--- a/Tailwind learning/index.html
+++ b/Tailwind learning/index.html
@@ -1,117 +1,43 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vision.design</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vision.design</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+</head>
 
-  <body class="bg-white text-gray-800">
+<body class="bg-white text-gray-800">
 
-    <!-- Navbar -->
-    <div class="w-full border-b">
-      <div class="container mx-auto px-4">
-        <div class="flex items-center justify-between py-4">
-          <h3 class="text-xl font-bold">Vision.design</h3>
-          <div class="flex gap-6">
-            <a class="text-sm font-medium" href="#">Home</a>
-            <a class="text-sm opacity-60 hover:opacity-100" href="#">Services</a>
-            <a class="text-sm opacity-60 hover:opacity-100" href="#">Pricing</a>
-            <a class="text-sm opacity-60 hover:opacity-100" href="#">Contact</a>
-          </div>
-        </div>
+  <!-- Navbar -->
+  <nav class="border-b">
+    <div class="max-w-5xl mx-auto px-4 py-3 flex justify-between items-center">
+      <h3 class="font-bold">Vision.design</h3>
+      <div class="flex gap-4 text-sm">
+        <a href="#" class="opacity-100">Home</a>
+        <a href="#" class="opacity-50">Services</a>
+        <a href="#" class="opacity-50">Contact</a>
       </div>
     </div>
+  </nav>
 
-    <!-- Hero Section -->
-    <section class="container mx-auto px-4 py-20 text-center">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">
-        Build Stunning Designs <br /> for Your Business
-      </h1>
-      <p class="text-gray-500 max-w-xl mx-auto mb-6">
-        We help startups and businesses create beautiful and functional
-        websites using modern design systems.
-      </p>
-      <button class="bg-black text-white px-6 py-3 rounded-lg">
-        Get Started
-      </button>
-    </section>
+  <!-- Hero -->
+  <section class="text-center py-20 px-4">
+    <h1 class="text-4xl font-bold mb-4">
+      Simple Design <br /> for Modern Web
+    </h1>
+    <p class="text-gray-500 mb-6">
+      Clean & responsive websites using Tailwind CSS.
+    </p>
+    <button class="bg-black text-white px-5 py-2 rounded-md">
+      Get Started
+    </button>
+  </section>
 
-    <!-- Services -->
-    <section class="bg-gray-50 py-16">
-      <div class="container mx-auto px-4">
-        <h2 class="text-3xl font-bold text-center mb-10">Our Services</h2>
+  <!-- Footer -->
+  <footer class="border-t py-4 text-center text-sm text-gray-500">
+    © 2026 Vision.design
+  </footer>
 
-        <div class="grid md:grid-cols-3 gap-6">
-          <div class="bg-white p-6 rounded-xl shadow-sm">
-            <h3 class="text-lg font-semibold mb-2">Web Design</h3>
-            <p class="text-gray-500 text-sm">
-              Clean, modern and responsive website designs.
-            </p>
-          </div>
-
-          <div class="bg-white p-6 rounded-xl shadow-sm">
-            <h3 class="text-lg font-semibold mb-2">Development</h3>
-            <p class="text-gray-500 text-sm">
-              Fast and scalable websites using modern tech.
-            </p>
-          </div>
-
-          <div class="bg-white p-6 rounded-xl shadow-sm">
-            <h3 class="text-lg font-semibold mb-2">Branding</h3>
-            <p class="text-gray-500 text-sm">
-              Create strong brand identity for your business.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Pricing -->
-    <section class="container mx-auto px-4 py-16">
-      <h2 class="text-3xl font-bold text-center mb-10">Pricing</h2>
-
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="border p-6 rounded-xl text-center">
-          <h3 class="font-semibold mb-2">Basic</h3>
-          <p class="text-3xl font-bold mb-4">$49</p>
-          <p class="text-sm text-gray-500">Single page design</p>
-        </div>
-
-        <div class="border p-6 rounded-xl text-center bg-black text-white">
-          <h3 class="font-semibold mb-2">Pro</h3>
-          <p class="text-3xl font-bold mb-4">$99</p>
-          <p class="text-sm opacity-80">Full website</p>
-        </div>
-
-        <div class="border p-6 rounded-xl text-center">
-          <h3 class="font-semibold mb-2">Enterprise</h3>
-          <p class="text-3xl font-bold mb-4">$199</p>
-          <p class="text-sm text-gray-500">Custom solution</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section class="bg-gray-50 py-16">
-      <div class="container mx-auto px-4 text-center">
-        <h2 class="text-3xl font-bold mb-4">Contact Us</h2>
-        <p class="text-gray-500 mb-6">
-          Have a project in mind? Let’s talk.
-        </p>
-        <button class="bg-black text-white px-6 py-3 rounded-lg">
-          Contact Now
-        </button>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="border-t py-6">
-      <div class="container mx-auto px-4 text-center text-sm text-gray-500">
-        © 2026 Vision.design — All rights reserved
-      </div>
-    </footer>
-
-  </body>
+</body>
 </html>
